--- a/style/style.css
+++ b/style/style.css
@@ -361,3 +361,24 @@ li:nth-child(3) a.headerTopLink {
   background: #f4f4f4;
   border-radius: 50px;
 }
+.news-li{
+  width: 320px;
+  height: 320px;
+  list-style: none;
+}
+.news-li img{
+  width: 320px;
+  height: 190px;
+  
+}
+.news-li h6{
+  width: 96px;
+  height: 20px;
+  font-family: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  color: #575757;
+  
+}
